--- a/app/views/leaderboards/_leaderboard.html.erb
+++ b/app/views/leaderboards/_leaderboard.html.erb
@@ -31,10 +31,10 @@
     <td class="user-score">...</td>
   </tr>
   <tr>
-    <td style="font-weight: bold; color: darkgoldenrod;"><%= counter.to_s %></td>
-    <td style="font-weight: bold; color: darkgoldenrod;" class="user-name"><%= link_to truncate(entry.user.name, :length => 25), entry.user %></td>
-    <td style="font-weight: bold; color: darkgoldenrod; width:50%;" class="user-completed-tasks"><%= @is_consumer == true ? truncate(entry.user.catch_phrase.to_s, :length => 25) : entry.completed_tasks %></td>
-    <td style="font-weight: bold; color: darkgoldenrod;" class="user-score"><%= entry.score %></td>
+    <td style="font-weight: bold; background-color: lightyellow;"><%= counter.to_s %></td>
+    <td style="font-weight: bold; background-color: lightyellow;" class="user-name"><%= link_to truncate(entry.user.name, :length => 25), entry.user %></td>
+    <td style="font-weight: bold; background-color: lightyellow; width:50%;" class="user-completed-tasks"><%= @is_consumer == true ? truncate(entry.user.catch_phrase.to_s, :length => 25) : entry.completed_tasks %></td>
+    <td style="font-weight: bold; background-color: lightyellow;" class="user-score"><%= entry.score %></td>
   </tr>
   <% end %>
   <% counter += 1 %>
