--- a/app/views/paths/completion.html.erb
+++ b/app/views/paths/completion.html.erb
@@ -34,9 +34,11 @@ $(function(){
             You're now ranked <strong><%= @user_rank %></strong> with <strong><%= @total_points_earned.to_i %> points</strong>.
             <% if @next_rank_points.to_i > 0 %>You only need <%= @next_rank_points.to_i %> points to move up to the next rank!<% end %>
           </p>
+           <% if @must_register %>
           <p style="line-height:13px;">
             Create an account below so you can <span style="text-decoration:underline; font-weight:bold;">improve your ranking</span>, <span style="text-decoration:underline; font-weight:bold;">start a public profile</span> and <span style="text-decoration:underline; font-weight:bold;">unlock more challenges!</span>
           </p>
+          <% end %>
         </div>
       </div>
     </div>
