--- a/app/views/paths/_settings.html.erb
+++ b/app/views/paths/_settings.html.erb
@@ -24,11 +24,11 @@
       </select>
     </div>
   </div>
-  <hr/>
-  <div class="field clearfix">
+  <hr style="margin-top:10px; margin-bottom:10px;"/>
+  <div class="field clearfix" style="margin-bottom: 0px;">
     <label>Permissions</label>
     <div class="input">
-      <ul class="inputs-list">
+      <ul class="inputs-list" style="margin-bottom: 0px;">
         <li>
           <label>
             <%= f.check_box :is_public %>
@@ -61,9 +61,8 @@
         </li>
       </ul>
     </div>
-    <br>
   </div>
-  <hr/>
+  <hr style="margin-top:10px; margin-bottom:10px;"/>
   <div class="field clearfix">
     <label>Picture URL</label>
     <div class="input">
@@ -73,12 +72,12 @@
   </div>
   <div class="field clearfix">
     <div class="input">
-      <%= image_tag(path.path_pic, :id => "image_url_preview", :width => "210", :style=>"margin:30px 0px 20px 0  px") %>
+      <%= image_tag(path.path_pic, :id => "image_url_preview", :height => "90px", :style=>"margin:30px 0px 20px 0  px") %>
     </div>
   </div>
   <hr/>
-  <div style="float:right; margin: 10px 20px 10px 0px;">
-    <%= f.submit "Save", :class => "btn primary" %>
+  <div style="float:right; margin: 0px 20px 0px 0px;">
+    <%= f.submit "Save", :class => "btn primary", :style => "margin-right: 10px;" %>
     <span class="btn secondary" onclick="$('#settings_modal').modal('hide');">Close</span>
   </div>
 <% end %>
