--- a/app/views/sections/_edit_content.html.erb
+++ b/app/views/sections/_edit_content.html.erb
@@ -32,9 +32,9 @@
       </div>
       <% info_resources.each do |r| %>
       <div style="margin-top:20px;">
-        <p>If you have trouble seeing this document, you can <%= link_to "download it here", r.obj.url %>. You can remove the attachment <%= link_to "here", r, :method => :delete, :confirm => "Are you sure you want to delete this document?" %>.</p>
+        <p>If you have trouble seeing this document, you can <%= link_to "download it here", r.obj.url.gsub("::",":") %>. You can remove the attachment <%= link_to "here", r, :method => :delete, :confirm => "Are you sure you want to delete this document?" %>.</p>
         <p class="ie_warning" style="display:none;"><strong>NOTE:</strong> If you are using Microsoft Internet Explore, you will need to add <i>http://docs.google.com</i> to your list of trusted sites. <a href="http://windows.microsoft.com/en-us/windows-vista/Security-zones-adding-or-removing-websites" target="_blank">Instructions here.</a></p>
-        <iframe src="http://docs.google.com/viewer?url=<%=u r.obj.url %>&embedded=true" width="800" height="650" style="border: none;"></iframe>
+        <iframe src="http://docs.google.com/viewer?url=<%=u r.obj.url.gsub("::",":") %>&embedded=true" width="800" height="650" style="border: none;"></iframe>
       </div>
       <% end %>
     <% end %>
