--- a/app/views/paths/_settings.html.erb
+++ b/app/views/paths/_settings.html.erb
@@ -72,7 +72,7 @@
   </div>
   <div class="field clearfix">
     <div class="input">
-      <%= image_tag(path.path_pic, :id => "image_url_preview", :height => "90px", :style=>"margin:30px 0px 20px 0  px") %>
+      <%= image_tag(path.path_pic, :class => "image_url_preview", :height => "90px", :style=>"margin:30px 0px 20px 0  px") %>
     </div>
   </div>
   <hr/>
