--- a/app/views/sections/_edit_tasks.html.erb
+++ b/app/views/sections/_edit_tasks.html.erb
@@ -1,17 +1,24 @@
 <script>
 $(function(){
   //$('.section_questions_container form').submit(block_form_submit);
-  $('.section_questions_container form').on('ajax:success', add_new_task);
+  
+  $('.section_questions_container form').each(function(){
+    $(this).unbind();
+    $(this).on('ajax:success', add_new_task);
+  });
   $('.delete_button').each(function(){
+    $(this).unbind();
     bind_delete_task(this);
   });
   $('.edit_button').each(function(){
+    $(this).unbind();
     $(this).click(function(){
       $(this).attr("disabled","disabled");
     });
     bind_edit_task(this);
   });
   $(".correct_answer").change(function(){
+    $(this).unbind();
     bind_answer_suggestion(this);
   });
   $('.task_list td').hover(
