--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,3 +1,4 @@
+<div class="alert-message error" style="display: none;"></div>
 <div class="question_display row">
   <div style="float:right; margin-top:0px; display:none;" class="edit_task_buttons">
     <%= link_to "Delete", task,
