Added Vanity AB testing.

--- a/app/views/sections/modals/_start_modal.html.erb
+++ b/app/views/sections/modals/_start_modal.html.erb
@@ -11,7 +11,7 @@
       <li style="padding:5px;">You only have <strong>30 seconds</strong> to answer each question before your streak bonus expires.</li>
     </ol>
     <p style="font-size: 16px; padding:0 7px 5px 10px; font-weight: bold;">Good luck!</p>
-    <p style="font-size: 22px; padding:5px 7px 5px 30px; display:inline;" id="starting_timer"><strong>00:15</strong></p>
+    <p style="font-size: 22px; padding:5px 7px 5px 30px; display:inline;" id="starting_timer"><strong><%= ab_test :countdown_options %></strong></p>
     <span class="btn primary" style="float:right;" onclick="$('#start_modal').modal('hide');start_question_timer();">Skip</span>
   </div>
 </div>
