--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -7,7 +7,7 @@
       <% unless @enrolled %>
         <%= form_for current_user.enrollments.build(:path_id => @path.id) do |f| %>
           <%= f.hidden_field :path_id %>
-          <%= f.submit "Enroll", :class=> "btn primary", :style => "margin: 10px 40px 0px 0px; float:right;" %>
+          <%= f.submit "Get Started", :class=> "btn primary", :style => "margin: 10px 40px 0px 0px; float:right;" %>
         <% end %>
       <% else %>
         <%= link_to @start_mode, continue_path_path(@path), :class => "btn primary", :style => "margin: 10px 40px 0px 0px; float:right;"%>
