Stops users from leaving challenge if its their first challenge.

--- a/app/views/paths/completion.html.erb
+++ b/app/views/paths/completion.html.erb
@@ -4,7 +4,7 @@ $(function(){
   $("#completion_content").fadeIn(2000);
   $('a:not([id*="sign"])').attr("href", "#");
   $('#save_score, a:not([id*="sign"])').click(function(){
-    $('#startmodal').modal({
+    $('#jumpstart_registration_modal').modal({
       keyboard: true,
       backdrop: 'static',
       show: true
