Added Facebook login to signin and changed wording on landing page to be ent/cons agnostic.

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -5,7 +5,7 @@
   <h1 style="font-size: 100px; margin-top:50px;">Meta<span style="color:green">Bright</span></h1>
   <h3>Knowledge is an asset. Track it.</h3>
   <br>
-  <p style="font-size: 16px;"><strong>MetaBright</strong> helps companies ensure their employees have the knowledge they need to perform their best.</p>
+  <p style="font-size: 16px;">What you <strong>know</strong> makes you <strong>valuable</strong>. Is your true value <strong style="color:green;">recognized?</strong></p>
   <br>
   <%= form_for(:pages, :url => invitation_path, :method => "GET") do |f| %>
   <%= f.text_field :email, :autofocus => true, :placeholder => "Enter your email address..." %> <%= f.submit "Request an Invite", :class => "btn primary",  %>
