Fixed issue with facebook login creating blank account.

--- a/app/views/pages/consumer_landing.html.erb
+++ b/app/views/pages/consumer_landing.html.erb
@@ -26,6 +26,7 @@
       </div>
     </div>
     <%= f.submit "Sign in", :class => "btn primary", :style => "margin-left:150px;" %>
+    <%= link_to "Login with Facebook", "/auth/facebook", :class => "btn secondary" %>
   <% end %>
   </div>
 </div>
