--- a/app/views/sections/modals/_jumpstart.html.erb
+++ b/app/views/sections/modals/_jumpstart.html.erb
@@ -22,12 +22,14 @@
           <%= f.text_field :name, :value => "", :style => "width:235px;" %>
         </div>
       </div>
+      <% if ab_test :motto %>
       <div class="clearfix">
         <label style="font-size: 16px;">Enter a motto:</label>
         <div class="input">
           <%= f.text_field :catch_phrase, :value => "", :style => "width:235px;" %>
         </div>
       </div>
+      <% end %>
     </div>
   </div>
   <div class="modal-footer">
