--- a/app/views/paths/finish.html.erb
+++ b/app/views/paths/finish.html.erb
@@ -43,42 +43,7 @@ $(function(){
       </div>
     </div>
     <% if @must_register %>
-    <div class="row" style="margin:0 125px 0 125px;">
-      <table style="border: 1px solid lightgray; background-color:whitesmoke; padding: 100px;">
-        <tr>
-          <td style="border-top: none; vertical-align: middle;">
-            <%= link_to image_tag("/images/facebook_login_button.png", :size => "244x50"), "/auth/facebook", :id => "facebook_signin" %>
-          </td>
-          <td style="border-top: none; border-right: 0px solid darkgray; border-left: 0px solid darkgray; vertical-align: middle;">
-            <p style="font-weight: bold; font-size; 18px;"><span style="font-size:25px; color:lightgray;">|</span> Or <span style="font-size:25px; color:lightgray;">|</span></p>
-          </td>
-          <td style="padding: 13px; border-top: none;">
-            <%= form_for(current_user, :html => {:id => "change_credentials_form", :style => "margin-bottom:0px;"}) do |f| %>
-              <%= f.hidden_field :path_id, :value => @path.id %>
-              <div class="clearfix" style="margin-bottom:8px;">
-                <label style="font-size: 14px; width: 60px;">Email</label>
-                <div class="input" style="margin-left: 70px;">
-                  <%= f.text_field :email, :value => "", :style => "width:175px; margin-right: 15px;" %>
-                </div>
-              </div>
-              <div class="clearfix" style="margin-bottom:8px;">
-                <label style="font-size: 14px; width: 60px;">Password</label>
-                <div class="input" style="margin-left: 70px;" >
-                  <%= f.password_field :password, :value => "", :style => "width:175px; margin-right: 15px;" %>
-                </div>
-              </div>
-              <div class="clearfix" style="margin-bottom:0px;">
-                <label style="font-size: 14px; width: 60px;">Confirm Password</label>
-                <div class="input" style="margin-left: 70px;" >
-                  <%= f.password_field :password_confirmation, :value => "", :style => "width:175px; margin-right: 15px;" %>
-                </div>
-              </div>
-              <%= f.submit "Save Score", :class => "btn primary", :style => "margin-left: 120px;" %>
-            <% end %>
-          </td>
-        </tr>
-      </table>
-    </div>
+      <%= render "users/registration", { :user => current_user, :submit_button_name => "Save Score" } %>
     <% else %>
     <div style="margin:20px;">
       <% if @enable_comments %>
@@ -95,6 +60,11 @@ $(function(){
     </div>
     <% end %>
   </section>
+  </section>
+  <% if @enable_recommendations %>
+  <hr/>
+  <%= render "pages/suggested_paths", {:paths_title => "Similar paths", :paths_list => @similar_paths} %>
+  <% end %>
   <section>
   <%= render "leaderboards/leaderboard", 
     { :leaderboard_entries => @leaderboards[1], 
@@ -105,9 +75,4 @@ $(function(){
       :limit => 5,
       :table_class => "bordered-table"
   } %>
-  </section>
-  <% if @enable_recommendations %>
-  <hr/>
-  <%= render "pages/suggested_paths", {:paths_title => "Similar paths", :paths_list => @similar_paths} %>
-  <% end %>
 </section>
