--- a/app/views/paths/show.html.erb
+++ b/app/views/paths/show.html.erb
@@ -2,7 +2,7 @@
   <%= render "users/immediate_registration", { :path => @path } %>
   <script>
     $(function(){
-      $('#username_modal').modal({ keyboard: true, backdrop: 'static', show: true });
+      $('#username_modal').modal({ backdrop: 'static', show: true });
       bind_change_name_form();
     });
   </script>
